--- a/Day3/Untargeted_metabolomics_DM.Rmd
+++ b/Day3/Untargeted_metabolomics_DM.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untargeted Metabollmics Data Matrix"
+title: "Untargeted Metabolomics Data Matrix"
 author: "Pietro Franceschi"
 date: "12/3/2020"
 output: ioslides_presentation
